Formatting the navigation

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,11 +14,6 @@ html {
   padding: 0;
 }
 
-a {
-  text-decoration: none;
-  color: $color-grey-dark-1;
-}
-
-ul {
-  list-style: none;
+img {
+  width: 100%;
 }
