--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,8 @@ html {
   margin: 0;
   padding: 0; }
 
-a {
-  text-decoration: none;
-  color: #333; }
-
-ul {
-  list-style: none; }
+img {
+  width: 100%; }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -26,3 +22,39 @@ body {
   color: #333;
   line-height: 1.6;
   letter-spacing: 0.25px; }
+
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #011a24;
+  opacity: 0.8;
+  width: 100%;
+  height: 7rem;
+  position: fixed;
+  top: 0;
+  padding: 0 3rem;
+  transition: 0.5s; }
+  .navigation__logo {
+    background: url("../images/icons/logo-white.png") no-repeat center center/cover;
+    width: 18rem;
+    height: 4rem; }
+  .navigation__list {
+    list-style: none;
+    display: flex; }
+  .navigation__link {
+    text-decoration: none;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 0.4px;
+    padding: 1rem 0.5rem;
+    margin: 0 1.8rem;
+    border-bottom: 0.3rem transparent solid;
+    padding-bottom: 1rem;
+    transition: border-color 0.5s ease-in-out; }
+    .navigation__link:hover {
+      border-color: #adadad; }
+    .navigation__link--current {
+      border-color: #e4491c; }
