--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,11 @@
 $color-primary: #e4491c;
 
-$color-secondary-ligh: #014966;
-$color-secondary-dar: #011a24;
+$color-secondary-light: #014966;
+$color-secondary-dark: #011a24;
 
 $color-grey-dark-1: #333;
 $color-grey-light-1: #f5f5f5;
+$color-grey-light-2: #adadad;
 
 $color-white: #fff;
 $color-black: #000;
