--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,3 +8,25 @@ body {
   line-height: 1.6;
   letter-spacing: 0.25px;
 }
+
+.heading-primary {
+  color: $color-white;
+  text-align: center;
+
+  &--main {
+    display: block;
+    font-size: 4.5rem;
+    font-weight: 400;
+    color: rgba($color-white, 0.75);
+    letter-spacing: 0.8rem;
+    text-transform: uppercase;
+  }
+
+  &--sub {
+    display: block;
+    font-size: 2.5rem;
+    margin: 1rem 0 3.2rem;
+    letter-spacing: 0.2rem;
+    font-weight: 300;
+  }
+}
