--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'base/typography';
 
 @import 'components/button';
+@import 'components/video';
 
 @import 'layout/header';
 @import 'layout/navigation';
