--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,146 @@ body {
   line-height: 1.6;
   letter-spacing: 0.25px; }
 
+.heading-primary {
+  color: #fff;
+  text-align: center; }
+  .heading-primary--main {
+    display: block;
+    font-size: 4.5rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.75);
+    letter-spacing: 0.8rem;
+    text-transform: uppercase; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2.5rem;
+    margin: 1rem 0 3.2rem;
+    letter-spacing: 0.2rem;
+    font-weight: 300; }
+
+.about-box {
+  width: 100%;
+  overflow: hidden;
+  padding: 0 1.5rem;
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .about-box__heading {
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 0.4px;
+    font-size: 2.5rem;
+    font-weight: 400; }
+  .about-box__text {
+    font-size: 2.2rem; }
+  .about-box__icon {
+    height: 10rem;
+    width: 10rem; }
+    .about-box__icon--2 {
+      height: 9.25rem;
+      width: 6rem; }
+    .about-box__icon--3 {
+      margin-left: 1rem; }
+
+.btn {
+  text-decoration: none;
+  display: inline-block;
+  font-size: 2.2rem;
+  cursor: pointer; }
+
+.btn--light {
+  color: #fff;
+  border: 0.15px #fff solid;
+  background: rgba(0, 0, 0, 0.02); }
+  .btn--light::before, .btn--light::after {
+    background: #fff; }
+
+.btn--dark {
+  border: 0.15px #333 solid;
+  color: #333;
+  background: rgba(0, 0, 0, 0.02); }
+  .btn--dark::before, .btn--dark::after {
+    background: #333; }
+
+.btn--main {
+  position: relative; }
+  .btn--main::before, .btn--main::after {
+    content: '';
+    width: 0;
+    height: 0.5px;
+    position: absolute;
+    transition: all 0.2s linear;
+    transition-delay: 0s; }
+  .btn--main:before {
+    top: 0;
+    left: 0; }
+  .btn--main::after {
+    bottom: 0;
+    right: 0; }
+  .btn--main:hover::before, .btn--main:hover::after {
+    width: 100%;
+    transition-delay: 0.2s; }
+  .btn--main:hover .btn__span::before,
+  .btn--main:hover .btn__span::after {
+    transition-delay: 0s; }
+
+.btn__span {
+  display: inline-block;
+  padding: 1.3rem 3.5rem; }
+  .btn__span--light::before, .btn__span--light::after {
+    background: #fff; }
+  .btn__span--dark::before, .btn__span--dark::after {
+    background: #333; }
+  .btn__span::before, .btn__span::after {
+    content: '';
+    width: 0.5px;
+    height: 0;
+    position: absolute;
+    transition: all 0.2s linear;
+    transition-delay: 0.2s; }
+  .btn__span::before {
+    top: 0;
+    left: 0; }
+  .btn__span::after {
+    bottom: 0;
+    right: 0; }
+  .btn__span:hover::before, .btn__span:hover::after {
+    height: 100%;
+    transition-delay: 0.2s; }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
+.flex-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%; }
+
+.header {
+  background: linear-gradient(to right bottom, rgba(1, 26, 36, 0.8), rgba(0, 0, 0, 0.5));
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  z-index: -10;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .header__text-box {
+    text-align: center; }
+
 .navigation {
   display: flex;
   align-items: center;
@@ -35,6 +175,8 @@ body {
   top: 0;
   padding: 0 3rem;
   transition: 0.5s; }
+  .navigation--top {
+    background-color: transparent; }
   .navigation__logo {
     background: url("../images/icons/logo-white.png") no-repeat center center/cover;
     width: 18rem;
@@ -58,3 +200,7 @@ body {
       border-color: #adadad; }
     .navigation__link--current {
       border-color: #e4491c; }
+
+.section-about {
+  padding: 3.5rem;
+  background: #f5f5f5; }
