--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,3 +30,11 @@ body {
     font-weight: 300;
   }
 }
+
+// .heading-secondary {
+//   font-family: 'Montserrat', sans-serif;
+//   letter-spacing: 0.4px;
+//   font-size: 2.5rem;
+//   font-weight: 400;
+//   margin-bottom: 15px;
+// }
