--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,9 +3,14 @@
 
 @import 'base/base';
 @import 'base/typography';
+@import 'base/utilities';
 
+@import 'components/about-box';
 @import 'components/button';
 @import 'components/video';
 
+@import 'layout/flex-items';
 @import 'layout/header';
 @import 'layout/navigation';
+
+@import 'pages/home';
