Creating the card component

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,69 @@ body {
     letter-spacing: 0.2rem;
     font-weight: 300; }
 
+.heading-secondary {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.4px;
+  font-weight: 300;
+  font-size: 4rem;
+  line-height: 1.2; }
+
+.heading-tertiary {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 1.5rem; }
+
+.paragraph {
+  font-size: 2.2rem;
+  margin: 2rem 0 2.8rem 0; }
+
+.py-1 {
+  padding: 0.5rem 0; }
+
+.py-2 {
+  padding: 1rem 0; }
+
+.py-3 {
+  padding: 1.5rem 0; }
+
+.py-4 {
+  padding: 2rem 0; }
+
+.py-5 {
+  padding: 3rem 0; }
+
+.mb-1 {
+  margin-bottom: 0.5rem; }
+
+.mb-2 {
+  margin-bottom: 1rem; }
+
+.mb-3 {
+  margin-bottom: 1.5rem; }
+
+.mb-4 {
+  margin-bottom: 2rem; }
+
+.mb-5 {
+  margin-bottom: 3rem; }
+
+.mt-1 {
+  margin-top: 0.5rem; }
+
+.mt-2 {
+  margin-top: 1rem; }
+
+.mt-3 {
+  margin-top: 1.5rem; }
+
+.mt-4 {
+  margin-top: 2rem; }
+
+.mt-5 {
+  margin-top: 3rem; }
+
 .about-box {
   width: 100%;
   overflow: hidden;
@@ -130,6 +193,38 @@ body {
   .btn__span:hover::before, .btn__span:hover::after {
     height: 100%;
     transition-delay: 0.2s; }
+
+.card__row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  color: #fff; }
+  .card__row--reversed {
+    flex-direction: row-reverse; }
+
+.card__col {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1; }
+
+.card__col--1 {
+  height: 100%; }
+
+.card__col--2 {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 6rem;
+  background-color: #003246; }
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
 
 .bg-video {
   position: absolute;
