--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,8 @@ $color-primary: #e4491c;
 $color-secondary-light: #014966;
 $color-secondary-dark: #011a24;
 
+$color-navy-blue: #003246;
+
 $color-grey-dark-1: #333;
 $color-grey-light-1: #f5f5f5;
 $color-grey-light-2: #adadad;
