--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,10 +31,23 @@ body {
   }
 }
 
-// .heading-secondary {
-//   font-family: 'Montserrat', sans-serif;
-//   letter-spacing: 0.4px;
-//   font-size: 2.5rem;
-//   font-weight: 400;
-//   margin-bottom: 15px;
-// }
+.heading-secondary {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.4px;
+  font-weight: 300;
+  font-size: 4rem;
+  line-height: 1.2;
+}
+
+.heading-tertiary {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+.paragraph {
+  font-size: 2.2rem;
+  margin: 2rem 0 2.8rem 0;
+}
