--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,10 @@
 
 @import 'components/about-box';
 @import 'components/button';
+@import 'components/card';
 @import 'components/video';
 
+@import 'layout/flex-columns';
 @import 'layout/flex-items';
 @import 'layout/header';
 @import 'layout/navigation';
