Creating the cases section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'components/card';
 @import 'components/video';
 
+@import 'layout/cases';
 @import 'layout/flex-columns';
 @import 'layout/flex-items';
 @import 'layout/header';
