--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,9 @@
 .section-about {
-  padding: 3.5rem;
+  padding: 5rem;
   background: $color-grey-light-1;
+}
+
+.section-cases {
+  padding: 5rem;
+  text-align: center;
 }
