--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,9 @@ body {
 .mb-5 {
   margin-bottom: 3rem; }
 
+.mb-6 {
+  margin-bottom: 5rem; }
+
 .mt-1 {
   margin-top: 0.5rem; }
 
@@ -239,6 +242,25 @@ body {
     width: 100%;
     object-fit: cover; }
 
+.cases__row {
+  display: flex;
+  flex-wrap: wrap; }
+
+.cases__col {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 0.4rem; }
+
+.cases__img {
+  opacity: 0.8;
+  background-position: center;
+  background-size: cover;
+  opacity: 0.75;
+  transition: opacity 0.5s ease-in-out;
+  margin-bottom: 0.4rem; }
+  .cases__img:hover {
+    opacity: 1; }
+
 .flex-items {
   display: flex;
   justify-content: center;
@@ -297,5 +319,9 @@ body {
       border-color: #e4491c; }
 
 .section-about {
-  padding: 3.5rem;
+  padding: 5rem;
   background: #f5f5f5; }
+
+.section-cases {
+  padding: 5rem;
+  text-align: center; }
