Formatting the mgmt section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,10 +8,10 @@
 @import 'components/about-box';
 @import 'components/button';
 @import 'components/card';
+@import 'components/cases';
+@import 'components/mgmt';
 @import 'components/video';
 
-@import 'layout/cases';
-@import 'layout/flex-columns';
 @import 'layout/flex-items';
 @import 'layout/header';
 @import 'layout/navigation';
