--- a/css/style.css
+++ b/css/style.css
@@ -229,19 +229,6 @@ body {
   height: 100%;
   object-fit: cover; }
 
-.bg-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  overflow: hidden; }
-  .bg-video__content {
-    height: 100%;
-    width: 100%;
-    object-fit: cover; }
-
 .cases__row {
   display: flex;
   flex-wrap: wrap; }
@@ -260,6 +247,47 @@ body {
   margin-bottom: 0.4rem; }
   .cases__img:hover {
     opacity: 1; }
+
+.mgmt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  flex-wrap: wrap; }
+  .mgmt__img {
+    width: 40vh;
+    height: 40vh;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+    margin: 0 2.5rem;
+    transition: transform 0.6s ease-out; }
+  .mgmt__person {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 2.8rem; }
+  .mgmt__position {
+    font-size: 2.2rem; }
+  .mgmt__divider {
+    height: 0.2rem;
+    background-color: #e4491c;
+    width: 4rem;
+    display: block;
+    margin: 0 auto; }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
 
 .flex-items {
   display: flex;
@@ -323,5 +351,9 @@ body {
   background: #f5f5f5; }
 
 .section-cases {
+  padding: 5rem;
+  text-align: center; }
+
+.section-mgmt {
   padding: 5rem;
   text-align: center; }
