Formatting the footer

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,6 @@
 @import 'layout/flex-items';
 @import 'layout/header';
 @import 'layout/navigation';
+@import 'layout/footer';
 
 @import 'pages/home';
