--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,28 @@ body {
     .navigation__link--current {
       border-color: #e4491c; }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 12rem;
+  background-color: #003246; }
+  .footer__icon {
+    color: #fff;
+    opacity: 0.6;
+    font-size: 1.5rem;
+    padding: 0 1.15rem;
+    transition: opacity 0.2s ease-in-out; }
+    .footer__icon:hover {
+      opacity: 0.8; }
+  .footer__text {
+    color: #fff;
+    letter-spacing: 0.7px;
+    font-size: 1.5rem;
+    margin-top: 1.5rem; }
+
 .section-about {
   padding: 5rem;
   background: #f5f5f5; }
