Formatting the form

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,8 +4,10 @@ $color-secondary-light: #014966;
 $color-secondary-dark: #011a24;
 
 $color-navy-blue: #003246;
+$color-orange-light: #fadbd2;
 
 $color-grey-dark-1: #333;
+$color-grey-dark-2: #707070;
 $color-grey-light-1: #f5f5f5;
 $color-grey-light-2: #adadad;
 
