--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'components/button';
 @import 'components/card';
 @import 'components/cases';
+@import 'components/form';
 @import 'components/mgmt';
 @import 'components/video';
 
