--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,14 @@ body {
   font-size: 2.2rem;
   margin: 2rem 0 2.8rem 0; }
 
+.bg--dark {
+  background-color: #003246;
+  color: #fff; }
+
+.bg--light {
+  background-color: #f5f5f5;
+  color: inherit; }
+
 .py-1 {
   padding: 0.5rem 0; }
 
@@ -197,12 +205,26 @@ body {
     height: 100%;
     transition-delay: 0.2s; }
 
+.btn--submit {
+  width: 100%;
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1.4rem 2.5rem;
+  background: #003246;
+  color: #fff;
+  border: none;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  transition: all 0.2s ease-in-out; }
+  .btn--submit:hover {
+    background: #014966;
+    color: #fff; }
+
 .card__row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
-  color: #fff; }
+  width: 100%; }
   .card__row--reversed {
     flex-direction: row-reverse; }
 
@@ -221,8 +243,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 6rem;
-  background-color: #003246; }
+  padding: 6rem; }
 
 .card__img {
   width: 100%;
@@ -239,7 +260,6 @@ body {
   padding: 0 0.4rem; }
 
 .cases__img {
-  opacity: 0.8;
   background-position: center;
   background-size: cover;
   opacity: 0.75;
@@ -247,6 +267,47 @@ body {
   margin-bottom: 0.4rem; }
   .cases__img:hover {
     opacity: 1; }
+
+.form {
+  width: 100%;
+  padding: 2rem 0; }
+  .form__label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-size: 2rem; }
+  .form__control {
+    margin-bottom: 1.5rem; }
+    .form__control-textarea {
+      height: 12rem;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 300;
+      font-size: 1.8rem;
+      border: #adadad 0.5px solid;
+      padding: 1rem 1.5rem;
+      border-radius: 0.35rem;
+      transition: box-shadow 0.15s ease-in-out; }
+      .form__control-textarea:focus {
+        outline-color: #fadbd2;
+        border: 0.5px solid rgba(228, 73, 28, 0.2);
+        box-shadow: 0 0 0 3px #fadbd2;
+        padding: 1rem 1.5rem; }
+  .form__input {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 1.8rem;
+    border: #adadad 0.5px solid;
+    padding: 1rem 1.5rem;
+    border-radius: 0.35rem;
+    width: 100%;
+    height: 5rem;
+    color: #707070;
+    letter-spacing: 0.25px;
+    transition: box-shadow 0.15s ease-in-out; }
+    .form__input:focus {
+      outline-color: #fadbd2;
+      border: 0.5px solid rgba(228, 73, 28, 0.2);
+      box-shadow: 0 0 0 3px #fadbd2;
+      padding: 1rem 1.5rem; }
 
 .mgmt {
   display: flex;
@@ -261,8 +322,7 @@ body {
     border-radius: 50%;
     overflow: hidden;
     object-fit: cover;
-    margin: 0 2.5rem;
-    transition: transform 0.6s ease-out; }
+    margin: 0 2.5rem; }
   .mgmt__person {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
