--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -37,4 +37,12 @@
     height: 100%;
     object-fit: cover;
   }
+
+  &__author {
+    font-size: 2rem;
+  }
+
+  &__date {
+    font-size: 2rem;
+  }
 }
