--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,9 @@
 
 @import 'layout/flex-items';
 @import 'layout/header';
+@import 'layout/header-blog';
 @import 'layout/navigation';
 @import 'layout/footer';
 
 @import 'pages/home';
+@import 'pages/blog';
