--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -20,7 +20,7 @@
   }
 
   &__text {
-    color: $color-white;
+    color: $color-grey-light-1;
     letter-spacing: 0.7px;
     font-size: 1.5rem;
     margin-top: 1.5rem;
