--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -8,6 +8,13 @@
   color: inherit;
 }
 
+.container {
+  max-width: 128rem;
+  padding: 0 1.5rem;
+  margin: 9rem auto;
+  overflow: hidden;
+}
+
 .py-1 {
   padding: 0.5rem 0;
 }
