--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,13 +11,13 @@
 @import 'components/cases';
 @import 'components/form';
 @import 'components/mgmt';
+@import 'components/post';
 @import 'components/video';
 
 @import 'layout/flex-items';
-@import 'layout/header';
-@import 'layout/header-blog';
-@import 'layout/navigation';
 @import 'layout/footer';
+@import 'layout/header-blog';
+@import 'layout/header';
+@import 'layout/navigation';
 
 @import 'pages/home';
-@import 'pages/blog';
