Formatting the post2 and post3 pages

--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,8 @@ body {
   font-size: 2.15rem; }
 
 .bi-calendar2-check {
-  margin-left: 0.18rem; }
+  margin-left: 0.1rem;
+  margin-right: 0.3rem; }
 
 .cases__row {
   display: flex;
