--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,19 @@ body {
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; /* 10px / 16 */
+
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  @include respond(phone) {
+    font-size: 40.62%;
+  }
 }
 
 *,
