Applying media queries onto the header

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,7 +12,15 @@
   justify-content: center;
   align-items: center;
 
+  @include respond(phone) {
+    height: 80vh;
+  }
+
   &__text-box {
     text-align: center;
+
+    @include respond(phone) {
+      margin-top: 10rem;
+    }
   }
 }
