--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,20 @@ body {
     color: rgba(255, 255, 255, 0.75);
     letter-spacing: 0.8rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 37.5em) {
+      .heading-primary--main {
+        letter-spacing: 0.3rem;
+        font-size: 3.25rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2.5rem;
     margin: 1rem 0 3.2rem;
     letter-spacing: 0.2rem;
     font-weight: 300; }
+    @media only screen and (max-width: 37.5em) {
+      .heading-primary--sub {
+        margin: 1.25rem 0 3.25rem;
+        font-size: 2rem; } }
 
 .heading-secondary {
   font-family: 'Montserrat', sans-serif;
@@ -447,8 +455,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      height: 80vh; } }
   .header__text-box {
     text-align: center; }
+    @media only screen and (max-width: 37.5em) {
+      .header__text-box {
+        margin-top: 10rem; } }
 
 .navigation {
   display: flex;
@@ -463,6 +477,11 @@ body {
   padding: 0 3rem;
   transition: 0.5s;
   z-index: 1000; }
+  @media only screen and (max-width: 37.5em) {
+    .navigation {
+      flex-direction: column;
+      height: 15rem;
+      padding: 2rem; } }
   .navigation--top {
     background-color: transparent; }
   .navigation__logo {
@@ -472,6 +491,9 @@ body {
   .navigation__list {
     list-style: none;
     display: flex; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation__list {
+        margin-bottom: 1rem; } }
   .navigation__link {
     text-decoration: none;
     font-size: 1.8rem;
@@ -484,6 +506,10 @@ body {
     border-bottom: 0.3rem transparent solid;
     padding-bottom: 1rem;
     transition: border-color 0.5s ease-in-out; }
+    @media only screen and (max-width: 37.5em) {
+      .navigation__link {
+        padding: 1rem 0.25rem;
+        margin: 0 1.2rem; } }
     .navigation__link:hover {
       border-color: #adadad; }
     .navigation__link--current {
