--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -20,6 +20,11 @@ body {
     color: rgba($color-white, 0.75);
     letter-spacing: 0.8rem;
     text-transform: uppercase;
+
+    @include respond(phone) {
+      letter-spacing: 0.3rem;
+      font-size: 3.25rem;
+    }
   }
 
   &--sub {
@@ -28,6 +33,11 @@ body {
     margin: 1rem 0 3.2rem;
     letter-spacing: 0.2rem;
     font-weight: 300;
+
+    @include respond(phone) {
+      margin: 1.25rem 0 3.25rem;
+      font-size: 2rem;
+    }
   }
 }
 
