--- a/sass/components/_about-box.scss
+++ b/sass/components/_about-box.scss
@@ -1,5 +1,5 @@
 .about-box {
-  width: 100%;
+  width: 33.3%;
   overflow: hidden;
   padding: 0 1.5rem;
   margin: 1rem auto;
@@ -7,6 +7,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @include respond(tab-port) {
+    width: 60%;
+
+    &:not(:last-child) {
+      margin: 1rem auto 4.5rem;
+    }
+  }
+
+  @include respond(phone) {
+    width: 100%;
+  }
 
   &__heading {
     font-family: 'Montserrat', sans-serif;
@@ -23,9 +35,19 @@
     height: 10rem;
     width: 10rem;
 
+    @include respond(tab-land) {
+      height: 9rem;
+      width: 9rem;
+    }
+
     &--2 {
       height: 9.25rem;
       width: 6rem;
+
+      @include respond(tab-land) {
+        height: 8.5rem;
+        width: 5.15rem;
+      }
     }
 
     &--3 {
