--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.4px;
   font-weight: 300;
-  font-size: 4rem;
+  font-size: 3.6rem;
   line-height: 1.2; }
   .heading-secondary--underline {
     border-bottom: rgba(1, 73, 102, 0.3) solid 1px;
@@ -327,6 +327,14 @@ body {
   flex: 25%;
   max-width: 25%;
   padding: 0 0.4rem; }
+  @media only screen and (max-width: 56.25em) {
+    .cases__col {
+      flex: 50%;
+      max-width: 100%; } }
+  @media only screen and (max-width: 37.5em) {
+    .cases__col {
+      flex: 100%;
+      max-width: 100%; } }
 
 .cases__img {
   background-position: center;
@@ -385,6 +393,14 @@ body {
   text-align: center;
   height: 100%;
   flex-wrap: wrap; }
+  .mgmt__container:not(:last-child) {
+    margin-bottom: 4rem; }
+    @media only screen and (max-width: 75em) {
+      .mgmt__container:not(:last-child) {
+        width: 100%; } }
+    @media only screen and (max-width: 37.5em) {
+      .mgmt__container:not(:last-child) {
+        margin-bottom: 3rem; } }
   .mgmt__img {
     width: 40vh;
     height: 40vh;
@@ -392,12 +408,17 @@ body {
     overflow: hidden;
     object-fit: cover;
     margin: 0 2.5rem; }
+    @media only screen and (max-width: 75em) {
+      .mgmt__img {
+        width: 28vh;
+        height: 28vh; } }
   .mgmt__person {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 2.8rem; }
   .mgmt__position {
-    font-size: 2.2rem; }
+    font-size: 2.2rem;
+    color: #707070; }
   .mgmt__divider {
     height: 0.2rem;
     background-color: #e4491c;
