--- a/sass/components/_cases.scss
+++ b/sass/components/_cases.scss
@@ -8,6 +8,16 @@
     flex: 25%;
     max-width: 25%;
     padding: 0 0.4rem;
+
+    @include respond(tab-port) {
+      flex: 50%;
+      max-width: 100%;
+    }
+
+    @include respond(phone) {
+      flex: 100%;
+      max-width: 100%;
+    }
   }
 
   &__img {
