--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -9,9 +9,9 @@
 }
 
 .container {
-  max-width: 128rem;
+  max-width: 90%;
   padding: 0 1.5rem;
-  margin: 9rem auto;
+  margin: 7rem auto;
   overflow: hidden;
 }
 
