--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -32,6 +32,17 @@
       align-items: flex-start;
       justify-content: center;
       padding: 6rem;
+
+      @include respond(phone) {
+        padding: 4.5rem;
+      }
+    }
+
+    &--blog {
+      @include respond(tab-port) {
+        flex: 100%;
+        max-width: 100%;
+      }
     }
   }
 
