--- a/sass/components/_mgmt.scss
+++ b/sass/components/_mgmt.scss
@@ -6,11 +6,15 @@
   height: 100%;
   flex-wrap: wrap;
 
-  &__container:not(:last-child) {
-    margin-bottom: 4rem;
-
+  &__container {
     @include respond(tab-land) {
       width: 100%;
+    }
+  }
+
+  &__container:not(:last-child) {
+    @include respond(tab-land) {
+      margin-bottom: 4rem;
     }
 
     @include respond(phone) {
@@ -39,7 +43,7 @@
   }
 
   &__position {
-    font-size: 2.2rem;
+    font-size: 2.1rem;
     color: $color-grey-dark-2;
   }
 
