--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -4,10 +4,14 @@
   padding: 10rem;
   border-radius: 3px;
 
+  @include respond(phone) {
+    padding: 6rem;
+  }
+
   &__article {
     text-align: justify;
     hyphens: auto;
-    font-size: 2.2rem;
+    font-size: 2.1rem;
   }
 
   &__source {
