--- a/sass/layout/_header-blog.scss
+++ b/sass/layout/_header-blog.scss
@@ -5,7 +5,7 @@
       rgba($color-black, 0.5)
     ),
     url('../images/home/blog.jpg') no-repeat center center/cover;
-  height: 40vh;
+  height: 50vh;
   z-index: -10;
   display: flex;
   justify-content: center;
@@ -13,5 +13,9 @@
 
   &__text-box {
     text-align: center;
+
+    @include respond(phone) {
+      margin-top: 10rem;
+    }
   }
 }
